--- a/SafeDreamer/configs.yaml
+++ b/SafeDreamer/configs.yaml
@@ -110,13 +110,14 @@ defaults:
   horizon: 333
   penalty_multiplier_init: 5e-9
   lagrange_multiplier_init: 1e-6
+  # Episode-length used to align dual update with episodic eval metrics.
+  # Set to env max_episode_steps / action_repeat if known; default 200 works for SafetyPointGoal1-v0 (1000 steps, repeat=5).
+  lagrange_episode_length: 200
   use_cost: True
   use_ghost_budget: False
   ghost_budget: 1.0
   ghost_penalty_multiplier_init: 5e-9
   ghost_lagrange_multiplier_init: 1e-6
-  pessimistic: False
-  cost_weight: 10.0
   cost_limit: 25.0
   use_cost_model: True
   return_lambda: 0.95
